ambient/allow-agentgateway-oss.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-agentgateway-oss
  namespace: default
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: agentgateway-oss-agentgateway-oss-chart
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/agentgateway-system/sa/agentgateway
