ambient/allow-nginx.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-nginx-only-ingress
  namespace: default
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: nginx-app-nginx-chart
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/agentgateway-system/sa/agentgateway
