ambient/allow-node-app.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-node-app
  namespace: default
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: node-app-stable
    - group: ""
      kind: Service
      name: node-app-canary
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/agentgateway-system/sa/agentgateway
